build_output.txt
   Compiling stfsc_engine v0.1.0 (/home/netcat/Downloads/stfsc-main)
error[E0433]: failed to resolve: use of undeclared crate or module `nalgebra`
   --> src/main.rs:529:50
    |
529 | ...                   let mut new_linvel = vector![target_vel.x, current_vel.y, target_vel.z];
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `nalgebra`
    |
    = note: this error originates in the macro `vector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `nalgebra`
   --> src/main.rs:529:50
    |
529 | ...                   let mut new_linvel = vector![target_vel.x, current_vel.y, target_vel.z];
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `nalgebra`
    |
    = note: this error originates in the macro `vector` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this crate
    |
1   + use rapier3d::prelude::nalgebra;
    |

error[E0308]: mismatched types
   --> src/main.rs:124:66
    |
124 |         if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb.0) {
    |                                                          ------- ^^^^^^^^^^^ expected `RigidBodyHandle`, found `Index`
    |                                                          |
    |                                                          arguments to this method are incorrect
    |
note: method defined here
   --> /home/netcat/.cargo/registry/src/index.crates.io-6f17d22bba15001f/rapier3d-0.18.0/src/dynamics/rigid_body_set.rs:168:12
    |
168 |     pub fn get_mut(&mut self, handle: RigidBodyHandle) -> Option<&mut RigidBody> {
    |            ^^^^^^^
help: consider removing the tuple struct field `0`
    |
124 -         if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb.0) {
124 +         if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb) {
    |

error[E0061]: this method takes 2 arguments but 1 argument was supplied
   --> src/main.rs:125:18
    |
125 |             body.set_locked_axes(LockedAxes::ROTATION_LOCKED);
    |                  ^^^^^^^^^^^^^^^----------------------------- argument #2 of type `bool` is missing
    |
note: method defined here
   --> /home/netcat/.cargo/registry/src/index.crates.io-6f17d22bba15001f/rapier3d-0.18.0/src/dynamics/rigid_body.rs:199:12
    |
199 |     pub fn set_locked_axes(&mut self, locked_axes: LockedAxes, wake_up: bool) {
    |            ^^^^^^^^^^^^^^^
help: provide the argument
    |
125 |             body.set_locked_axes(LockedAxes::ROTATION_LOCKED, /* bool */);
    |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0308]: mismatched types
   --> src/main.rs:140:62
    |
140 |     if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb.0) {
    |                                                      ------- ^^^^^^^^^^^ expected `RigidBodyHandle`, found `Index`
    |                                                      |
    |                                                      arguments to this method are incorrect
    |
note: method defined here
   --> /home/netcat/.cargo/registry/src/index.crates.io-6f17d22bba15001f/rapier3d-0.18.0/src/dynamics/rigid_body_set.rs:168:12
    |
168 |     pub fn get_mut(&mut self, handle: RigidBodyHandle) -> Option<&mut RigidBody> {
    |            ^^^^^^^
help: consider removing the tuple struct field `0`
    |
140 -     if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb.0) {
140 +     if let Some(body) = physics_world.rigid_body_set.get_mut(player_rb) {
    |

error[E0308]: mismatched types
   --> src/main.rs:316:44
    |
316 |                     world.update_streaming(pos, physics);
    |                           ---------------- ^^^ expected `Vec3`, found `Matrix<f32, Const<3>, ..., ...>`
    |                           |
    |                           arguments to this method are incorrect
    |
    = note: expected struct `Vec3`
               found struct `Matrix<f32, Const<3>, Const<1>, ArrayStorage<f32, 3, 1>>`
note: method defined here
   --> /home/netcat/Downloads/stfsc-main/src/world/mod.rs:466:12
    |
466 |     pub fn update_streaming(&mut self, player_pos: glam::Vec3, physics: &mut PhysicsWorld) {
    |            ^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0061, E0308, E0433.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `stfsc_engine` (bin "stfsc_engine") due to 6 previous errors
